--- a/src/components/DataCard.astro
+++ b/src/components/DataCard.astro
@@ -11,23 +11,29 @@ const {
     title,
     link,
 } = data
----
 
+const idCard = `data-${id}`
+---
+<article class=" hover:bg-zinc-800 shadow-lg bg-zinc-500/30 rounded-md">
 <a  href={`/data/${id}`} 
-    class="data-item transition-all duration-300 flex relative p-2 overflow-hidden  gap-2 pb-6 rounded-md hover:bg-zinc-800 shadow-lg bg-zinc-500/30 w-44 flex-col"
+    class="data-item transition-all duration-300 flex relative p-2 overflow-hidden  gap-2 pb-6  w-44 flex-col"
     transition:name=`data ${id} box`>
 
     <picture class="aspect-square w-full h-auto flex-none">
         <img 
         src={link} 
         alt={title}
-        class="object-cover w-full h-full rounded-md"
+        class="object-cover w-250 h-250 rounded-md"
         transition:name=`component ${id} image`
         >
     </picture>
-    <div class="flex flex-auto flex-col truncate ">
-        <h4 class="text-white text-sm px-2 ">
+    <div class="flex flex-auto flex-col px-2 ">
+        <h4 class="text-white text-sm px-2 " transition:name=`data ${data.id} title`>
             {title}
         </h4>
+        <span class="text-xs text-gray-400" transition:name=`data ${data.id} id`>
+            {id}
+        </span>
     </div>
 </a>
+</article>
