--- a/src/pages/data/[id].astro
+++ b/src/pages/data/[id].astro
@@ -16,17 +16,38 @@ const playlistSongs = songs.filter((song) => song.albumId === data?.albumId)
 	<Icono/>
 	<div 
 	id="components-container"
-	class="relative transition-all duration-1000 bg-green-500"
+	class="relative flex flex-col h-full bg-zinc-900 overflow-x-hidden"
 	transition:name=`data ${id} box`>
-	contenido
+	
 
 	<!-- <PageHeader/> -->
-	
+	<header class="flex flex-row  gap-8 mt-12">
+
+		<picture class="aspect-square w-52 h-52 flex-none">
+			<img 
+			src={data.link} 
+			alt={data.title}
+			class="object-cover w-250 h-250 shadow-lg "
+			transition:name=`component ${data.id} image`
+			>
+		</picture>
+
+		<div class="flex flex-col justify-between">
+			<h2 class="flex flex-1 items-end">Componente</h2>
+			<div>
+			  <h1 class="text-5xl font-bold block text-white">
+				{data?.title}
+				<span transition:name=`playlist ${data?.id} title`></span>
+			  </h1>
+			</div>
+	</header>
+
+
 	<div class="relative z-10 px-6 pt-10">
 
 	
 		</div>
-		<div class="absolute inset-0 bg-gradient-to-t from-zinc-900 via-zinc-900/80">
+		<div class="absolute inset-0 bg-gradient-to-t from-zinc-900 via-zinc-900/80 -z-10">
 
 		</div>
 	</div>
