--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Icono from "@/components/Icono";
 	<Icono/>
 	<div 
 	id="components-container"
-	class="relative transition-all duration-1000 bg-green-500"
+	class="relative transition-all duration-1000"
 	>
 	contenido
 
