--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,22 +6,25 @@ import DataCard from "@/components/DataCard.astro";
 import Icono from "@/components/Icono";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Tailwind Components">
 	<Icono/>
 	<div 
 	id="components-container"
 	class="relative transition-all duration-1000"
 	>
-	contenido
 
 	<!-- <PageHeader/> -->
 	
-	<div class="relative z-10 px-6 pt-10">
+	<div class="relative z-10 px-6 pt-10 ">
 
 		<!-- <Greetings/> -->
 	
-			<h1 class="font-bold text-4xl">buenos días</h1>
-			<div class="flex flex-wrap mt-6 gap-4">
+			<h2 class="font-bold text-3xl text-center">Conoce los diferentes componentes para tu web</h2>
+			<p class="mt-5 text-center">
+				Estos son algunos de los componentes que puedes utilizar para tu web. 
+				Conoce más sobre cada uno de ellos y que función cumplen.
+			</p>
+			<div class="flex flex-wrap mt-6 gap-4 justify-center">
 			{
 				data.map(data => <DataCard data={data}/> )
 			}
