--- a/src/components/Inicio.astro
+++ b/src/components/Inicio.astro
@@ -7,3 +7,6 @@ import Tailwind from "../Icons/tailwind.svg"
 <div>
     <img src="/tailwindcss.svg" alt="" width="50" height="50">
 </div>
+<h3>
+    hola
+</h3>
