--- a/src/pages/data/[id].astro
+++ b/src/pages/data/[id].astro
@@ -5,11 +5,12 @@ import {allData, songs} from "../../datos/data"
 
 
 import Icono from "../../components/Icono";
+import DataTable from '@/components/DataTable.astro';
 
 const { id } = Astro.params;
 
 const data  = allData.find((data) => data.id === id);
-const playlistSongs = songs.filter((song) => song.albumId === data?.albumId)
+const playlistSongs = songs.filter((song) => song.albumId === data?.albumId);
 ---
 
 <Layout title="Welcome to Astro.">
@@ -23,7 +24,7 @@ const playlistSongs = songs.filter((song) => song.albumId === data?.albumId)
 	<!-- <PageHeader/> -->
 	<header class="flex flex-row  gap-8 mt-12">
 
-		<picture class="aspect-square w-52 h-52 flex-none">
+		<picture class="aspect-square w-64 h-52 flex-none">
 			<img 
 			src={data.link} 
 			alt={data.title}
@@ -35,7 +36,7 @@ const playlistSongs = songs.filter((song) => song.albumId === data?.albumId)
 		<div class="flex flex-col justify-between">
 			<h2 class="flex flex-1 items-end">Componente</h2>
 			<div>
-			  <h1 class="text-5xl font-bold block text-white">
+			  <h1 class="text-5xl font-bold block text-white ">
 				{data?.title}
 				<span transition:name=`playlist ${data?.id} title`></span>
 			  </h1>
@@ -48,9 +49,11 @@ const playlistSongs = songs.filter((song) => song.albumId === data?.albumId)
 	
 		</div>
 		<div class="absolute inset-0 bg-gradient-to-t from-zinc-900 via-zinc-900/80 -z-10">
-
+			
 		</div>
+		<DataTable songs={playlistSongs}/>
 	</div>
+	
 	
 	</div>
 
