--- a/src/components/Inicio.astro
+++ b/src/components/Inicio.astro
@@ -1,12 +1,34 @@
 ---
-import Tailwind from "../Icons/tailwind.svg"
 
 
 ---
 
-<div>
-    <img src="/tailwindcss.svg" alt="" width="50" height="50">
-</div>
-<h3>
-    hola
-</h3>
+<section>
+    <div class=" flex flex-col items-center px-5 py-8 mx-auto">
+        <div class="flex flex-col w-full mb-3  text-left max-w-max lg:max-w-2xl">
+            <div class="w-full mx-auto">
+                <h1 class="text-center text-xl font-medium leading-tight text-gray-300">¿Por qué usar componentes?</h1>
+                <h2 class="text-center italic text-gray-400">El recurso más valioso y que menos valoramos es el tiempo.</h2>
+                <p class="mt-4"> La implementación de estos componentes ofrece una solución eficaz y eficiente para la creación de interfaces de usuario consistentes y estéticamente atractivas.</p>
+            </div>
+        </div>
+    </div>
+    <div class=" items-center w-full px-5">
+        <div class="flex flex-wrap justify-center w-full mx-auto  max-w-max lg:max-w-3xl">
+            <div class="relative justify-center lg:px-4">
+                <div class="lg:grid lg:grid-cols-2">
+                    <div class="p-8">
+                        <h1 class="text-center text-xl font-medium leading-tight text-gray-300">Optmización de tiempo.</h1>
+                        <p class="mt-6">Implementar componentes complejos mediante la combinación de clases no solo acelera la codificación, sino que también minimiza la necesidad de crear estilos personalizados desde cero. Esto se traduce en un ahorro sustancial de tiempo, concentrando esfuerzos en la implementación de funcionalidades clave en lugar de dedicar horas a la definición detallada de estilos. </p>
+                        <a href="#" class="inline-flex items-center mt-4 font-semibold text-blue-600 lg:mb-0 hover:text-neutral-600" title="read more"> Read More » </a>
+                    </div>
+                    <div class="p-8">
+                        <h1 class="text-center text-xl font-medium leading-tight text-gray-300">Escalabilidad y reuitilización</h1>
+                        <p class="mt-6">Los componentes preestilizados de Tailwind son altamente escalables y fácilmente reutilizables. Puedes implementar y personalizar rápidamente componentes comunes en diversas partes de tu aplicación, promoviendo la reutilización de código y una estructura más organizada.</p>
+                        <a href="#" class="inline-flex items-center mt-4 font-semibold text-blue-600 lg:mb-0 hover:text-neutral-600" title="read more"> Read More » </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
