--- a/src/components/Inicio.astro
+++ b/src/components/Inicio.astro
@@ -9,7 +9,7 @@
             <div class="w-full mx-auto">
                 <h1 class="text-center text-xl font-medium leading-tight text-gray-300">¿Por qué usar componentes?</h1>
                 <h2 class="text-center italic text-gray-400">El recurso más valioso y que menos valoramos es el tiempo.</h2>
-                <p class="mt-4"> La implementación de estos componentes ofrece una solución eficaz y eficiente para la creación de interfaces de usuario consistentes y estéticamente atractivas.</p>
+                <p class="mt-4 text-center"> La implementación de estos componentes ofrece una solución eficaz y eficiente para la creación de interfaces de usuario consistentes y estéticamente atractivas.</p>
             </div>
         </div>
     </div>
