--- a/src/pages/cabecera.astro
+++ b/src/pages/cabecera.astro
@@ -1,5 +1,6 @@
 ---
-import  MiComponente  from "@/components/MiComponente"
+import Header from "@/components/templates/Header";
+
 
 
 import Layout from "@/layouts/Layout.astro";
@@ -17,5 +18,5 @@ import Layout from "@/layouts/Layout.astro";
 </div>
 
 
-<MiComponente client:load />
-</Layout>@/components/MiComponente
+<Header client:load />
+</Layout>
