--- a/src/pages/cabecera.astro
+++ b/src/pages/cabecera.astro
@@ -1,7 +1,7 @@
 ---
 import Header from "@/components/templates/Header";
-
-
+import Header2 from "@/components/templates/Header2";
+import Header3 from "@/components/templates/Header3";
 
 import Layout from "@/layouts/Layout.astro";
 
@@ -19,4 +19,6 @@ import Layout from "@/layouts/Layout.astro";
 
 
 <Header client:load />
+<Header2 client:load />
+<Header3 client:load />
 </Layout>
