Gallery and team content

--- a/src/components/AsideMenu.astro
+++ b/src/components/AsideMenu.astro
@@ -80,7 +80,7 @@ En este apartado se puede realizar un componente que englobe estos dos component
             </a> 
             <a 
             class="flex gap-4 text-zinc-400 hover:text-zinc-100 items-center py-3 px-5 font-medium transition-duration-300 rounded-md hover:bg-zinc-800"
-            href="#">
+            href="/equipo">
                 <ContentIcon/>
                 Equipo
                 <slot/>
