--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -1,6 +1,7 @@
 ---
 import Contact1 from "@/components/templates/Contact1";
 import Contact2 from "@/components/templates/Contact2";
+import Contact3 from "@/components/templates/Contact3";
 
 import Layout from "@/layouts/Layout.astro";
 ---
@@ -20,4 +21,5 @@ import Layout from "@/layouts/Layout.astro";
 
             <Contact1 client:load/>
             <Contact2 client:load/>
+            <Contact3 client:load/>
 </Layout>
