--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import Explore from "@/components/Explore.astro"
 import Content from "@/components/Content"
 import DataCard from "@/components/DataCard.astro";
 import Icono from "@/components/Icono";
+import Features from "@/components/Features";
 ---
 
 <Layout title="Tailwind Components">
@@ -15,10 +16,11 @@ import Icono from "@/components/Icono";
 	<Icono/>
 	
 	<Content/>
-	<Inicio/>
 	<Explore/>
+	<Inicio/>
+	<Features/>
 
-	<div 
+	<!-- <div 
 	id="components-container"
 	class="relative transition-all duration-1000 z-10 "
 	>
@@ -36,7 +38,7 @@ import Icono from "@/components/Icono";
 		<div class=" inset-0 bg-gradient-to-t from-zinc-900 via-zinc-900/80">
 
 		</div>
-	
+	 -->
 	
 	
 
